[package]
edition = "2018"
name = "naive_hashmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
rand = "0.4.2"

[dev-dependencies]
criterion = "0.1"
quickcheck = "0.6"

[[bench]]
harness = false
name = "naive"

[[bin]]
doc = false
name = "naive_interpreter"

[[bin]]
doc = false
name = "standard"

[[bin]]
doc = false
name = "naive"

[[bench]]
harness = false
name = "specialized"

[[bin]]
doc = false
name = "specialized_interpreter"

[[bin]]
doc = false
name = "specialized"
